--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,14 @@
 name = "axum-graphql-prisma"
 version = "0.1.0"
 edition = "2021"
+# change to whatever you name your package
+default-run = "axum-graphql-prisma"
 
 [workspace]
 members = ["prisma-cli"]
 
 [dependencies]
-prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.4.0" }
+prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.4.1" }
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 axum = "0.5.1"
