--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,22 @@ edition = "2021"
 # change to whatever you name your package
 default-run = "axum-graphql-prisma"
 
+
 [workspace]
+resolver = "2"
 members = ["prisma-cli"]
 
 [dependencies]
-prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.4.1" }
+prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
+  # See more: https://prisma.brendonovich.dev/writing-data/create#create-many
+  # 'sqlite-create-many',
+  # See more: https://prisma.brendonovich.dev/extra/migrations
+  "migrations",
+  "sqlite",
+], default-features = false }
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
-axum = "0.5.1"
+axum = "0.6.16"
 dotenv = "0.15.0"
-async-graphql = "3.0.12"
-async-graphql-axum = "3.0.31"
+async-graphql = "5.0.7"
+async-graphql-axum = "5.0.7"
